# idas-scene-ai

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: DFD.md  PLAN.md  PRD.md  RESEARCH.md  RFC.md  THINK.md  USECASES.md
mobile/: .gitignore  README.md  app.json  package.json  tailwind.config.js
mobile/app/: _layout.tsx
mobile/app/(tabs)/: _layout.tsx  alerts.tsx  index.tsx  settings.tsx
mobile/app/alerts/: [id].tsx
src/idas/: __init__.py  __main__.py  config.py  licenses.py  runtime.py
src/idas/api/: alert_bus.py  deps.py  main.py  runner_registry.py
src/idas/api/routes/: __init__.py  alerts.py  detect.py  health.py  licenses.py  rules.py  streams.py
src/idas/models/: __init__.py  schemas.py
src/idas/perception/: __init__.py  _owlv2_runner.py  _yolo_world_worker.py  owlv2.py  stub.py  yolo_world.py
src/idas/pipeline/: __init__.py  clip_writer.py  detector.py  runner.py  tracker.py
src/idas/rules/: __init__.py  dsl.py  evaluator.py
src/idas/storage/: __init__.py  database.py  repos.py
src/idas/streams/: __init__.py  source.py
src/idas/tracking/: __init__.py  bytetrack.py  iou.py
tests/: conftest.py  test_alert_bus.py  test_api.py  test_clip_writer.py  test_licenses.py  test_lifecycle_endpoints.py  test_rules.py  test_runner_registry.py  test_smoke.py  test_stub_detector.py  test_tracker.py
